style.css
/* ... */
.footer-container .content_4 .bx {
  color: var(--white);
}

.f-design {
  width: 100%;
  color: var(--white);
  text-align: center;
}

.f-design .f-design-txt {
  border-top: 1px solid var(--secondaryColor);
  padding: 1.6rem 0;
  color: var(--secondaryColor);
}

/***** End Footer Section *****/

/**** Our Home product section  Starts ***/
#productContainer {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 4.8rem;

  & .information {
    display: flex;
    flex-direction: column;
    align-items: start;
    gap: 1rem;
  }
}

.cards {
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;
  gap: 2.5rem;
  width: 36rem;
  padding: 1.6rem;
  /* max-width: 1000px; */
  margin: 1.8vh auto;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
  border-radius: 0.3rem;
  /*border: 0.1rem solid #ccc;
  */
  -webkit-border-radius: 0.2rem;
  -moz-border-radius: 0.3rem;
  -ms-border-radius: 0.3rem;
  -o-border-radius: 0.3rem;
  -webkit-border-radius: 0.3rem;
}

.category {
  background-color: #e7d6d6;
  padding: 0.3rem 1.2rem;
  font-size: 1.2rem;
  letter-spacing: 0.1rem;
  border-radius: 10rem;
  -webkit-border-radius: 10rem;
  -moz-border-radius: 10rem;
  -ms-border-radius: 10rem;
  -o-border-radius: 10rem;
}

.productImage {
  max-width: 100%;
  width: 32rem;
  height: auto;
}

.productPriceElement,
.productQuantityElement,
.productStockElement {
  display: flex;
  gap: 2rem;
  align-items: center;
  text-align: center;
}

.productPriceElement {
  margin: 0.8rem 0;
}

.productProperty,
.productDescription {
  font-size: 1.6rem;
}

.stockElement {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  align-items: center;
  border: 0.2rem solid var(--borderColor);
  border-radius: 0.8rem;
  margin: 0.8rem 0;

  & button {
    background-color: transparent;
    color: var(--buttonColor);
    font-size: 2rem;
    padding: 0.6rem 2rem;
    font-weight: bold;
    border: none;

    &:hover {
      cursor: pointer;
    }

    &:first-child {
      border-right: 0.1rem solid var(--borderColor);
      border-radius: 0;
      -webkit-border-radius: 0;
      -moz-border-radius: 0;
      -ms-border-radius: 0;
      -o-border-radius: 0;
    }

    &:last-child {
      border-left: 0.1rem solid var(--borderColor);
      border-radius: 0;
      -webkit-border-radius: 0;
      -moz-border-radius: 0;
      -ms-border-radius: 0;
      -o-border-radius: 0;
    }
  }

  .productQuantity {
    padding: 0rem 3rem;
    margin: 0;
    font-weight: bold;
  }
}

/**** Our Home product section Ends  ****/

#cartValue {
  background-color: var(--buttonColor);
  color: #fff;
  padding: 1rem 2rem;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.4rem;
}

.add-to-cart-button,
.contact-btn,
.hero-btn a {
  font-weight: 500;
  font: inherit;
  border-radius: 6px;
  border: 0;
  padding: 1rem 2.8rem;
  background-color: var(--buttonColor);
  color: #fff;
  font-size: 1.6rem;
  /* margin-top: 1.2rem; */

  &:hover {
    box-shadow: inset 0px 1px 4px rgba(0, 0, 0, 0.16),
      inset 0px 0px 0px 3px rgb(51, 51, 51);
    background-color: var(--backgroundColor);
    color: var(--buttonColor);
    cursor: pointer;
  }

  .fa-cart-shopping {
    padding-right: 1rem;
  }
}

/*****  Add to Cart page starts *****/

#productCartContainer {
  display: flex;
  flex-direction: column;

  & .cards {
    width: 100%;
    max-width: 100%;
    margin: 0;
    box-shadow: 0 0;
    border-top: 0.1rem solid #d8d8d8;
    border-right: 0.1rem solid #d8d8d8;
    border-left: 0.1rem solid #d8d8d8;
    border-radius: 0;

    &:last-child {
      border-bottom: 0.1rem solid #d8d8d8;
    }
  }

  & .card {
    width: 100%;
    display: grid;
    grid-template-columns: 0.5fr 0.5fr 1fr 0.5fr 1fr 1fr;
    align-items: center;
    /* margin: auto; */
    gap: 3.2rem;
  }

  & .productImage {
    width: 16rem;
  }

  & .productName {
    font-size: 2rem;
  }

  & .productPrice {
    font-size: 1.6rem;
  }

  & .productActualPrice {
    font-size: 1.6rem;
  }
}

.category {
  background-color: #e7d6d6;
  padding: 0.3rem 1.2rem;
  font-size: 1.2rem;
  letter-spacing: 0.1rem;
  border-radius: 10rem;
  -webkit-border-radius: 10rem;
  -moz-border-radius: 10rem;
  -ms-border-radius: 10rem;
  -o-border-radius: 10rem;
}

.productRating {
  color: #e9db16;
}

.productPrice,
.productActualPrice {
  font-size: 2.2rem;
}

.productActualPrice {
  text-decoration: line-through;
}

.productCartTotalElem {
  display: flex;
  justify-content: end;
  width: 100%;
  margin-top: 3.2rem;
}

.productCartTotalElement {
  padding: 2.4rem;
  background-color: var(--backgroundSecondary);
  height: auto;
  width: 32rem;
  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
}

.productOrderTotal {
  /* background-color: rgb(60, 60, 60); */
  max-width: 30rem;

  & div {
    display: flex;
    justify-content: space-between;
    margin-top: 3.2rem;

    p {
      color: #8c9299;
    }

    .productSubTotal,
    .productFinalTotal,
    .productTax {
      color: var(--textColor);
      font-weight: bold;
    }
  }
}

/*****  Add to Cart page ends *****/

/*****  media queries Section *****/

/* https://getbootstrap.com/docs/5.0/layout/breakpoints/ */

@media (width <=1380px) {
  html {
    font-size: 56.25%;
  }

  .section-hero img {
    width: 90%;
  }
}

@media (width <=1220px) {
  html {
    font-size: 54%;
  }

  :is(.section-about,
    .section-blog,
    .section-course,
    .section-contact--homepage,
    .section-why--choose) .grid {
    gap: 6.4rem;
  }

  .choose-center-div figure::after {
    width: 46rem;
    height: 46rem;
  }
}
/* ... */

